Add openapi v3 schema to identity-server chart
